minor changes to backtesting